# passkcd

./: .gitignore  README.md  passkcd.cabal
meristem/improvements/: math
src/: Main.hs
src/Data/: Dictionary.hs  RegexShow.hs  Usage.hs
